[gd_scene load_steps=12 format=2]

[ext_resource path="res://Src/Assets/Fonts/Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Src/Assets/GUI/health-over.png" type="Texture" id=2]
[ext_resource path="res://Src/UserInterface&Systems/EnemyUI.gd" type="Script" id=3]
[ext_resource path="res://Src/UserInterface&Systems/HealthBar.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=3]

[sub_resource type="Theme" id=6]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
outline_size = 3
outline_color = Color( 1, 0.435294, 0.0588235, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 21
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 90, 21 )

[node name="EnemyUI" type="Panel"]
modulate = Color( 0.819608, 0.819608, 0.819608, 1 )
margin_top = 75.0
margin_right = 150.0
margin_bottom = 202.0
rect_min_size = Vector2( 150, 0 )
theme = SubResource( 6 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 150.0
margin_bottom = 126.0

[node name="EnemyName" type="Label" parent="."]
margin_left = 2.0
margin_top = -25.0
margin_right = 158.0
margin_bottom = 1.0
theme = SubResource( 7 )
custom_colors/font_color = Color( 0.988235, 0.580392, 0, 1 )
text = "Enemies Name"

[node name="HealthContainer" type="HBoxContainer" parent="."]
margin_left = 160.0
margin_right = 360.0
margin_bottom = 40.0

[node name="Health" type="Panel" parent="HealthContainer"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )

[node name="ProgressBar" type="ProgressBar" parent="HealthContainer/Health"]
modulate = Color( 0.433333, 1, 0, 1 )
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
theme = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 9 )
value = 100.0

[node name="HealthBar" parent="HealthContainer/Health" instance=ExtResource( 4 )]

[node name="EnergyContainer" type="HBoxContainer" parent="."]
margin_left = 160.0
margin_top = 45.0
margin_right = 360.0
margin_bottom = 85.0

[node name="Energy" type="Panel" parent="EnergyContainer"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )

[node name="EnergyBar" type="ProgressBar" parent="EnergyContainer/Energy"]
modulate = Color( 0.976471, 0.756863, 0, 1 )
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
theme = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 9 )
value = 100.0
